framec_tests/common/tests/negative/test_unterminated_ts_block_comment.frm
@target typescript

system TsUnterminatedBlockComment {
  actions:
    doThing() {
      /* ` a block comment that never closes
      const x = 1;
    }

  interface:
  machine:
    $S {
      e -> $S
    }
  domain:
}
